src/emit/emitter/snapshots/hebi__emit__emitter__tests__class_instance.snap
---
source: src/emit/emitter/tests.rs
expression: snapshot
---
# Input:
class T: pass

T()


# Func:
function "code":
  frame_size: 4
  length: 9
  const (length=2):
    0: <class descriptor "T">
    1: "T"
  code:
    0 | create_class_empty [0]
    2 | store_global [1]
    4 | load_global [1]
    6 | call0 
    7 | ret 
    8 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━●
r3 │             ●━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  
