src/emit/emitter/snapshots/hebi__emit__emitter__tests__closure.snap
---
source: src/emit/emitter/tests.rs
expression: snapshot
---
# Input:
fn a():
  v := 0
  fn b():
    print v
  return b

a()()


# Func:
function "b":
  frame_size: 4
  length: 6
  const: <empty>
  code:
    0 | load_capture slot=0
    2 | print 
    3 | push_none 
    4 | ret 
    5 | suspend 

function "a":
  frame_size: 5
  length: 18
  const (length=1):
    0: <func descriptor "b">
  code:
     0 | push_small_int value=0
     5 | store_reg r4
     7 | create_function [0]
     9 | capture_reg r4, slot=0
    12 | store_reg r4
    14 | load_reg r4
    16 | ret 
    17 | suspend 

function "code":
  frame_size: 4
  length: 10
  const (length=2):
    0: <func descriptor "a">
    1: "a"
  code:
     0 | create_function [0]
     2 | store_global [1]
     4 | load_global [1]
     6 | call0 
     7 | call0 
     8 | ret 
     9 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━●
r3 │             ●━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  
