src/emit/emitter/snapshots/hebi__emit__emitter__tests__fn_in_module.snap
---
source: src/emit/emitter/tests.rs
expression: snapshot
---
# Input:
value := 100
fn set(v):
  value = v
fn get():
  return value


# Func:
function "set":
  frame_size: 5
  length: 7
  const: <empty>
  code:
    0 | load_reg r4
    2 | store_module_var slot=0
    4 | push_none 
    5 | ret 
    6 | suspend 

function "get":
  frame_size: 4
  length: 4
  const: <empty>
  code:
    0 | load_module_var slot=0
    2 | ret 
    3 | suspend 

function "code":
  frame_size: 4
  length: 17
  const (length=2):
    0: <function descriptor "set">
    1: <function descriptor "get">
  code:
     0 | push_small_int value=100
     5 | store_module_var slot=0
     7 | create_function [0]
     9 | store_module_var slot=1
    11 | create_function [1]
    13 | store_module_var slot=2
    15 | ret 
    16 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━●
r3 │             ●━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  
