src/emit/emitter/snapshots/hebi__emit__emitter__tests__func-2.snap
---
source: src/emit/emitter/tests.rs
expression: snapshot
---
# Input:
fn test(a):
  print a

test(0)


# Func:
function "test":
  frame_size: 5
  length: 6
  const: <empty>
  code:
    0 | load_reg r4
    2 | print 
    3 | push_none 
    4 | ret 
    5 | suspend 

function "code":
  frame_size: 5
  length: 18
  const (length=2):
    0: <func "test">
    1: "test"
  code:
     0 | load_const [0]
     2 | store_global [1]
     4 | push_small_int value=0
     9 | store_reg r4
    11 | load_global [1]
    13 | call r4, args=1
    16 | ret 
    17 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━━━━━━━━━━━━━●
r3 │             ●━━━━━━━━━━━━━━━●
r4 │                 ●━━━━━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  09  10  11  
