src/emit/emitter/snapshots/hebi__emit__emitter__tests__func-3.snap
---
source: src/emit/emitter/tests.rs
expression: snapshot
---
# Input:
fn test(a, b=10):
  print a, b

test(1)
test(1, 2)


# Func:
function "test":
  frame_size: 7
  length: 31
  const: <empty>
  code:
     0 | is_pos_param_not_set index=1
     2 | jump_if_false offset=13
     4 | nop 
     5 | nop 
     6 | nop 
     7 | nop 
     8 | push_small_int value=10
    13 | store_reg r5
    15 | create_empty_list 
    16 | store_reg r6
    18 | load_reg r4
    20 | push_to_list r6
    22 | load_reg r5
    24 | push_to_list r6
    26 | print_list r6
    28 | push_none 
    29 | ret 
    30 | suspend 

function "code":
  frame_size: 6
  length: 37
  const (length=2):
    0: <func "test">
    1: "test"
  code:
     0 | load_const [0]
     2 | store_global [1]
     4 | push_small_int value=1
     9 | store_reg r4
    11 | load_global [1]
    13 | call r4, args=1
    16 | push_small_int value=1
    21 | store_reg r4
    23 | push_small_int value=2
    28 | store_reg r5
    30 | load_global [1]
    32 | call r4, args=2
    35 | ret 
    36 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r3 │             ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r4 │                 ●━━━━━━━●
r5 │                             ●━━━━━━━━━━━━━━━━━━━●
r6 │                                 ●━━━━━━━━━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  09  10  11  12  13  14  15  16  17  
